--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
         <section id="daily-hadith">
             <h2>Hadith des Tages</h2>
-            <p id="hadith-text"></p>
-            <p id="hadith-source"></p>
+              <p id="hadith-arabisch"></p>
+              <p id="hadith-deutsch"></p>
+              <p id="hadith-quelle"></p>
+            
         </section>
 
         <section id="daily-dua">
@@ -56,6 +58,8 @@
             <p id="dua-text"></p>
             <p id="dua-transliteration"></p>
             <p id="dua-translation"></p>
+              <p id="dua-quelle"></p>
+            
         </section>
     </main>
 
