--- a/index.html
+++ b/index.html
@@ -11,55 +11,49 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="icons/icon-192x192.png" alt="Logo" class="logo">
             <h1>Usul ad-Deen</h1>
+            <img src="icons/icon-192x192.png" alt="Logo" class="logo">
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Startseite</a></li>
+                <li><a href="index.html">Start</a></li>
                 <li><a href="hadith.html">Hadithsammlungen</a></li>
                 <li><a href="dua.html">Bittgebete</a></li>
                 <li><a href="books.html">Bücher</a></li>
-                <li><a href="articles.html">Beiträge</a></li>
+                <li><a href="posts.html">Beiträge</a></li>
                 <li><a href="about.html">Über uns</a></li>
-                <li><a href="settings.html">Mehr</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="time-date">
-            <h2>Aktuelle Uhrzeit</h2>
-            <p id="current-time"></p>
-            <h2>Islamisches & Gregorianisches Datum</h2>
-            <p id="islamic-date"></p>
-            <p id="gregorian-date"></p>
-        </section>
-
         <section id="prayer-times">
             <h2>Gebetszeiten</h2>
-            <p id="location">Ihr Standort: <span id="user-location"></span></p>
-            <p id="manual-selection">Manuelle Stadtauswahl: 
-                <select id="city-select"></select>
-            </p>
+            <p id="user-location">Ihr Standort: Wird ermittelt...</p>
+            <select id="city-select">
+                <option value="">Stadt manuell wählen</option>
+                <option value="Berlin">Berlin</option>
+                <option value="Hamburg">Hamburg</option>
+                <option value="München">München</option>
+                <option value="Köln">Köln</option>
+                <!-- Weitere Städte hier hinzufügen -->
+            </select>
             <ul id="prayer-times-list"></ul>
+            <p id="islamic-date"></p>
+            <p id="gregorian-date"></p>
+            <p id="mecca-time"></p>
         </section>
 
         <section id="daily-hadith">
             <h2>Hadith des Tages</h2>
-              <p id="hadith-arabisch"></p>
-              <p id="hadith-deutsch"></p>
-              <p id="hadith-quelle"></p>
-            
+            <p id="hadith-text"></p>
+            <p id="hadith-source"></p>
         </section>
 
         <section id="daily-dua">
             <h2>Bittgebet des Tages</h2>
             <p id="dua-text"></p>
-            <p id="dua-transliteration"></p>
-            <p id="dua-translation"></p>
-              <p id="dua-quelle"></p>
-            
+            <p id="dua-source"></p>
         </section>
     </main>
 
