--- a/index.html
+++ b/index.html
@@ -45,16 +45,21 @@
         </section>
 
         <section id="daily-hadith">
-            <h2>Hadith des Tages</h2>
-            <p id="hadith-text"></p>
-            <p id="hadith-source"></p>
-        </section>
+    <h2>Hadith des Tages</h2>
+    <p id="hadith-arabic" class="arabic-text"></p>
+    <p id="hadith-german"></p>
+    <p id="hadith-source"></p>
+    <p id="hadith-authenticity"></p>
+</section>
 
-        <section id="daily-dua">
-            <h2>Bittgebet des Tages</h2>
-            <p id="dua-text"></p>
-            <p id="dua-source"></p>
-        </section>
+<section id="daily-dua">
+    <h2>Bittgebet des Tages</h2>
+    <p id="dua-arabic" class="arabic-text"></p>
+    <p id="dua-german"></p>
+    <p id="dua-transliteration"></p>
+    <p id="dua-source"></p>
+</section>
+
     </main>
 
     <footer>
