--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <p id="mecca-time"></p>
         </section>
 
-        <section id="daily-hadith">
+  
+<section id="hadith-des-tages">
     <h2>Hadith des Tages</h2>
-    <p id="hadith-arabic" class="arabic-text"></p>
+    <p id="hadith-arabic" style="font-weight: bold;"></p>
     <p id="hadith-german"></p>
-    <p id="hadith-source"></p>
-    <p id="hadith-authenticity"></p>
+    <p id="hadith-quelle" style="font-style: italic;"></p>
 </section>
 
 <section id="daily-dua">
