--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <section id="gebetszeiten">
             <h2>Gebetszeiten</h2>
             <p>Fajr: <span id="fajr">00:00</span></p>
+            <p>Shuruk: <span id="Shuruk">00:00</span></p>
             <p>Dhuhr: <span id="dhuhr">00:00</span></p>
             <p>Asr: <span id="asr">00:00</span></p>
-            <p>Maghreb: <span id="maghreb">00:00</span></p>
+            <p>Maghreb: <span id="maghrib">00:00</span></p>
             <p>Isha: <span id="isha">00:00</span></p>
             <p>Islamische Mitternacht: <span id="mitternacht">00:00</span></p>
             <p>Letztes Drittel der Nacht: <span id="letztes-drittel">00:00</span></p>
