--- a/index.html
+++ b/index.html
@@ -5,66 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usul ad-Deen</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script defer src="script.js"></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
-
     <header>
         <h1>Usul ad-Deen</h1>
-        <img src="icons/icon-192x192.png" alt="Logo" class="header-logo">
+        <img src="icons/icon-192x192.png" alt="Logo" class="logo">
         <nav>
             <ul>
-                <li><a href="#">Start</a></li>
-                <li><a href="#">Gebetszeiten</a></li>
-                <li><a href="#">Hadithsammlungen</a></li>
-                <li><a href="#">Bücher</a></li>
-                <li><a href="#">Dua</a></li>
-                <li><a href="#">Beiträge</a></li>
-                <li><a href="#">Mehr</a></li>
+                <li><a href="index.html">Start</a></li>
+                <li><a href="hadith.html">Hadithsammlungen</a></li>
+                <li><a href="dua.html">Bittgebete</a></li>
+                <li><a href="beitraege.html">Beiträge</a></li>
+                <li><a href="buecher.html">Bücher</a></li>
+                <li><a href="mehr.html">Mehr</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="zeit-anzeige">
-            <h2>Aktuelle Uhrzeit</h2>
-            <p id="uhrzeit">00:00</p>
-            <p id="datum">-</p>
-            <p id="mekka-zeit">Mekka: 00:00</p>
-            <p id="standort">Ihr Standort: -</p>
+        <section id="uhrzeit">
+            <h2 id="aktuelle-uhrzeit"></h2>
+            <h3 id="aktuelles-datum"></h3>
         </section>
 
         <section id="gebetszeiten">
             <h2>Gebetszeiten</h2>
-            <p>Fajr: <span id="fajr">00:00</span></p>
-            <p>Shuruk: <span id="Shuruk">00:00</span></p>
-            <p>Dhuhr: <span id="dhuhr">00:00</span></p>
-            <p>Asr: <span id="asr">00:00</span></p>
-            <p>Maghreb: <span id="maghrib">00:00</span></p>
-            <p>Isha: <span id="isha">00:00</span></p>
-            <p>Islamische Mitternacht: <span id="mitternacht">00:00</span></p>
-            <p>Letztes Drittel der Nacht: <span id="letztes-drittel">00:00</span></p>
+            <p id="standort">Ihr Standort: Wird ermittelt...</p>
+            <label for="stadt-auswahl">Stadt manuell wählen:</label>
+            <select id="stadt-auswahl"></select>
+            <ul id="gebetszeiten-liste"></ul>
         </section>
 
         <section id="hadith-des-tages">
             <h2>Hadith des Tages</h2>
-            <p id="hadith-arabisch">-</p>
-            <p id="hadith-deutsch">-</p>
-            <p id="hadith-quelle">-</p>
+            <p id="hadith-arabisch"></p>
+            <p id="hadith-deutsch"></p>
+            <p id="hadith-quelle"></p>
+            <p id="hadith-authentizitaet"></p>
         </section>
 
         <section id="dua-des-tages">
             <h2>Bittgebet des Tages</h2>
-            <p id="dua-arabisch">-</p>
-            <p id="dua-deutsch">-</p>
-            <p id="dua-transliteration">-</p>
-            <p id="dua-quelle">-</p>
+            <p id="dua-arabisch"></p>
+            <p id="dua-deutsch"></p>
+            <p id="dua-transliteration"></p>
+            <p id="dua-quelle"></p>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Usul ad-Deen</p>
     </footer>
-
 </body>
 </html>
