--- a/index.html
+++ b/index.html
@@ -5,44 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usul ad-Deen</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="icons/icon-192x192.png" type="image/png">
+    <script defer src="script.js"></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
-
     <header>
-        <img src="icons/icon-192x192.png" alt="Logo" class="logo">
         <h1>Usul ad-Deen</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Startseite</a></li>
-                <li><a href="gebetszeiten.html">Gebetszeiten</a></li>
-                <li><a href="hadith.html">Hadith des Tages</a></li>
-                <li><a href="dua.html">Dua des Tages</a></li>
+                <li><a href="#">Startseite</a></li>
+                <li><a href="#">Gebetszeiten</a></li>
+                <li><a href="#">Hadith des Tages</a></li>
+                <li><a href="#">Bittgebete</a></li>
+                <li><a href="#">Über uns</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="uhrzeit-datum">
-            <p id="aktuelles-datum">Datum: Wird geladen...</p>
-            <p id="aktuelle-uhrzeit">Uhrzeit: Wird geladen...</p>
-            <p id="mekka-uhrzeit">Mekka-Zeit: Wird geladen...</p>
-            <p id="islamisches-datum">Islamisches Datum: Wird geladen...</p>
-            <p id="gregorianisches-datum">Gregorianisches Datum: Wird geladen...</p>
-        </section>
-
-        <section id="standort-auswahl">
-            <p id="aktueller-standort">Ihr Standort: Wird ermittelt...</p>
-            <label for="stadt-auswahl">Manuelle Stadtauswahl:</label>
-            <select id="stadt-auswahl">
-                <option value="">Bitte eine Stadt wählen...</option>
-            </select>
-        </section>
-
         <section id="gebetszeiten">
             <h2>Gebetszeiten</h2>
-            <table>
-                <tr><th>Gebet</th><th>Zeit</th></tr>
+            <p id="stadt-anzeige">Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
+            <table class="gebetszeiten-table">
+                <tr>
+                    <th>Gebet</th>
+                    <th>Zeit</th>
+                </tr>
                 <tr><td>Fajr</td><td id="fajr">00:00</td></tr>
                 <tr><td>Shuruk</td><td id="shuruk">00:00</td></tr>
                 <tr><td>Dhuhr</td><td id="dhuhr">00:00</td></tr>
@@ -52,27 +40,21 @@
             </table>
         </section>
 
-        <section id="hadith-des-tages">
+        <section id="hadith">
             <h2>Hadith des Tages</h2>
-            <p id="hadith-arabisch">Arabisch: Wird geladen...</p>
-            <p id="hadith-deutsch">Deutsch: Wird geladen...</p>
-            <p id="hadith-quelle">Quelle: Wird geladen...</p>
-            <p id="hadith-authentizität">Authentizität: Wird geladen...</p>
+            <p id="hadith-text">Lade Hadith...</p>
+            <p id="hadith-quellenangabe"></p>
         </section>
 
-        <section id="dua-des-tages">
-            <h2>Dua des Tages</h2>
-            <p id="dua-arabisch">Arabisch: Wird geladen...</p>
-            <p id="dua-deutsch">Deutsch: Wird geladen...</p>
-            <p id="dua-transliteration">Transliteration: Wird geladen...</p>
-            <p id="dua-quelle">Quelle: Wird geladen...</p>
+        <section id="dua">
+            <h2>Bittgebet des Tages</h2>
+            <p id="dua-text">Lade Bittgebet...</p>
+            <p id="dua-quellenangabe"></p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Usul ad-Deen. Alle Rechte vorbehalten.</p>
+        <p>&copy; 2025 Usul ad-Deen</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
