--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 <body>
     <header>
         <h1>Usul ad-Deen</h1>
-        <p id="stadt-anzeige">Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
+       <nav>
+            <ul>
+                <li><a href="#">Startseite</a></li>
+                <li><a href="#">Gebetszeiten</a></li>
+                <li><a href="#">Hadith des Tages</a></li>
+                <li><a href="#">Bittgebete</a></li>
+                <li><a href="#">Über uns</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+         <p id="stadt-anzeige">Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
         <p>Islamisches Datum: <span id="islamisches-datum">Lädt...</span></p>
         <p>Gregorianisches Datum: <span id="gregorianisches-datum">Lädt...</span></p>
         <p>Uhrzeit Mekka: <span id="uhrzeit-mekka">00:00</span></p>
         <p>Uhrzeit Berlin: <span id="uhrzeit-berlin">00:00</span></p>
-    </header>
-
-    <main>
         <section id="gebetszeiten">
             <h2>Gebetszeiten</h2>
             <table class="gebetszeiten-table">
